--- a/create-sign/index.html
+++ b/create-sign/index.html
@@ -378,7 +378,7 @@
 
     <!-- === DISCLAIMER BUTTON (ENGLISH TEXT) === -->
     <div style="margin-top: 10px; width: 100%; text-align: center;">
-        <button id="disclaimerBtn" style="background-color: var(--morty-yellow); color: var(--outline-black);">⚠️ Comic Disclaimer (Read Me!) ⚠️</button>
+        <button id="disclaimerBtn" style="background-color: var(--morty-yellow); color: var(--outline-black);"> Comic (Read Me!) </button>
     </div>
     <!-- === END DISCLAIMER BUTTON === -->
 
