--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <label>Sign Type:</label>
             <div> <!-- Wrapper for radios -->
                 <input type="radio" name="signType" value="prefix" id="signTypePrefix" disabled>
-                <label for="signTypePrefix">Signs Gallery</label> <!-- Label Changed -->
+                <label for="signTypePrefix">Signs Gallery</label>
                 <input type="radio" name="signType" value="custom" id="signTypeCustom" disabled>
                 <label for="signTypeCustom">Custom Sign</label>
             </div>
